# sheetman

./: readme.md
.github/workflows/: packages.yml  pages.yaml
source/app_tauri/: .gitignore  Cargo.toml  index.html  style.css
source/app_tauri/src/: main.rs
source/app_tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
source/app_tauri/src-tauri/src/: lib.rs  main.rs
source/native/: Cargo.toml
source/wasm/: Cargo.toml
source/wasm/prestatic/: index.html  sheetman.css  style.css
source/wasm/src/: change.rs  dom.rs  lib.rs  obs.rs  unit.rs  value.rs
