[package]
name = "desktop_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
rooting = { version = "0.1" }
flowcontrol = "0.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
wasm = { path = "../wasm" }
gloo-utils = "0.2.0"
wasm-bindgen-futures = "0.4.45"
