[package]
name = "native"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = "0.6.4"
flowcontrol = "0.2"
futures = "0.3"
http = "1"
htwrap = "0.5"
loga = "0.5"
mime_guess = "2.0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structre = "0.1.3"
taskmanager = "0.6"
tokio = { version = "1", features = ["fs", "rt", "process"] }
tokio-stream = { version = "0.1", features = ["net"] }
